Cabal-version:      >= 1.6
Name:               language-spelling
Version:            0.0
Author:             Francesco Mazzoli (f@mazzo.li)
Maintainer:         Francesco Mazzoli (f@mazzo.li)
Build-Type:         Simple
License:            PublicDomain
Build-Type:         Simple
Category:           Foreign binding, Text
Synopsis:           Various tools to detect/correct mistakes in words
Tested-With:        GHC==7.4.1
Homepage:           https://github.com/bitonic/language-spelling
Bug-Reports:        https://github.com/bitonic/language-spelling/issues
Description:
    Haskell library meant to be a set of tools to correct spelling mistakes,
    homophones, and OCR errors.

source-repository head
    type:     git
    location: git://github.com/bitonic/language-spelling.git

Library
    Build-Depends:    base >= 3 && < 5,
                      ListLike,
                      vector >= 0.5,
                      unordered-containers >= 0.1.3,
                      hashable,
                      containers

    GHC-Options:      -Werror -O2
    Extensions:       MultiParamTypeClasses,
                      FlexibleInstances,
                      ForeignFunctionInterface,
                      ScopedTypeVariables

    Exposed-Modules:  Language.Distance,
                      Language.Distance.Search,
                      Language.Distance.Search.BK,
                      Language.Distance.Search.TST,
                      Data.TST,
                      Data.TSTSet

    Other-Modules:    Language.Distance.Internal,
                      Language.Distance.Search.Class
