Cabal-version:      >= 1.6
Name:               language-spelling
Version:            0.0
Author:             Francesco Mazzoli (f@mazzo.li)
Maintainer:         Francesco Mazzoli (f@mazzo.li)
Build-Type:         Simple
License:            PublicDomain
Build-Type:         Simple
Category:           Foreign binding, Text
Synopsis:           Various tools to detect/correct mistakes in words
Tested-With:        GHC==7.4.1
Homepage:           https://github.com/bitonic/language-spelling
Bug-Reports:        https://github.com/bitonic/language-spelling/issues
Description:
    Haskell library meant to be a set of tools to correct spelling mistakes,
    homophones, and OCR errors.
    .
    Sample session
    .
    @
    ghci> :m + Language.Distance.Search.BK.hs
    ghci> distance "foo" "bar" :: Distance DamerauLevenshtein 
    ghci> let bk = foldr insert empty ["foo", "foa", "fooa", "ofo", "arstu", "nana", "faa"] :: BKTree String DamerauLevenshtein 
    ghci> query 0 "foo" bk
    [("foo",Distance {getDistance = 0})]
    ghci> query 2 "foo" bk
[("faa",Distance {getDistance = 2}),("foa",Distance {getDistance = 1}),("fooa",Distance {getDistance = 1}),("foo",Distance {getDistance = 0}),("ofo",Distance {getDistance = 1})]
    @

source-repository head
    type:     git
    location: git://github.com/bitonic/language-spelling.git

Library
    Build-Depends:    base >= 3 && < 5,
                      array,
                      bytestring,
                      containers,
                      ListLike,
                      listlike-instances,
                      text,
                      vector >= 0.5

    GHC-Options:      -Werror -O2

    Exposed-Modules:  Language.Distance,
                      Language.Distance.Internal,
                      Language.Distance.Search,
                      Language.Distance.Search.Class,
                      Language.Distance.Search.BK,
                      Language.Distance.Search.TST,
                      Language.Phonetic,
                      Language.Phonetic.Encoder,
                      Language.Phonetic.Soundex,
                      Language.Phonetic.Internal,
                      Data.TST,
                      Data.TSTSet

Test-Suite benchmarks
    Type:             exitcode-stdio-1.0

    Main-Is:          bench.hs

    GHC-Options:      -O2 -Werror

    Build-Depends:    base,
                      criterion,
                      random-shuffle,
                      bytestring,
                      time
